--- a/config/database.yml
+++ b/config/database.yml
@@ -14,3 +14,11 @@ development:
 test:
   <<: *default
   database: agenda_api_test
+
+production:
+  adapter: postgresql
+  encoding: unicode
+  database: agenda_api_production
+  username: <%= ENV['DATABASE_USER'] %>
+  password: <%= ENV['DATABASE_PASSWORD'] %>
+  pool: 15
