--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,10 @@
 language: ruby
 
 rvm:
-  - 2.6
+  - 2.6.0
+
+addons:
+  postgresql: 9.6
 
 notifications:
   email:
@@ -13,14 +16,16 @@ notifications:
 before_install:
   - gem update --system
   - gem install bundler
+
 cache: bundler
 
 branches:
   only:
     - master
 
-services:
-  - postgresql
+global:
+  - CC_TEST_REPORTER_ID=$CC_TEST_REPORTER_ID
+  - RAILS_ENV=test
 
 before_script:
   - cp config/database.yml.travis config/database.yml
@@ -29,14 +34,11 @@ before_script:
   - chmod +x ./cc-test-reporter
   - ./cc-test-reporter before-build
 
+script:
+  - bundle install --jobs=3 --retry=3
+  - bundle exec rake db:create
+  - bundle exec rake db:migrate
+  - bundle exec rspec
+
 after_script:
   - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
-
-deploy:
-  provider: heroku
-  app: agenda-api-rails
-  api_key:
-    secure: "$HEROKU_KEY"
-  run:
-    - "bundle exec rake db:migrate"
-    - restart
